Fixed spacing

--- a/index.css
+++ b/index.css
@@ -59,8 +59,12 @@ body {
 }
 
 #aboutmetext {
-  font-size: 20px;
+  font-size: 18px;
   color: #000000;
+  margin: 20px 45px 30px 45px;
+  padding: 20px;
+  border-style: solid;
+  border-width: 2px;
 }
 
 .bodyfont {
